--- a/dora_vis/public/index.html
+++ b/dora_vis/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <base href="">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -20,8 +21,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- Bootstrap 5.1.0-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    
+    <link href="bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
     <title>DORA Visualizer</title>
   </head>
   <body>
